fix image valign

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -178,6 +178,7 @@
    height: 261px;
    border-radius: 300px 100px 100px 100px;
    box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.12);
+   vertical-align: initial;
 }
 
 #main section.motives img:nth-child(2) {
